--- a/example.ipynb
+++ b/example.ipynb
@@ -52,13 +52,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Model's name: Joos-et-al\n",
       "Initial state: [139.1  90.2  29.2   4.2]\n",
       "Transition Matrix:\n",
       " [[1.     0.     0.     0.    ]\n",
@@ -77,6 +78,7 @@
     "# Choose of the Carbon Cycle\n",
     "carbon_cycle = Carbon_JOOS()\n",
     "\n",
+    "print('Model\\'s name:', carbon_cycle.name)\n",
     "print('Initial state:' , carbon_cycle.initial_state)\n",
     "print('Transition Matrix:\\n', carbon_cycle.Ac)\n",
     "print()\n",
@@ -98,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -127,13 +129,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Model's name: Geoffroy-et-al.\n",
       "Initial state: [1.01   0.0068]\n",
       "Transition Matrix:\n",
       " [[0.72191781 0.1       ]\n",
@@ -150,6 +153,7 @@
     "# Choose of the temperature dynamic\n",
     "temperature_dynamic = Temp_Discret_Geoffroy()\n",
     "\n",
+    "print('Model\\'s name:', temperature_dynamic.name)\n",
     "print('Initial state:' , temperature_dynamic.initial_state)\n",
     "print('Transition Matrix:\\n', temperature_dynamic.At)\n",
     "print()\n",
@@ -171,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -279,13 +283,6 @@
     "plt.legend()\n",
     "plt.show()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -304,7 +301,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.12 (main, Apr  4 2022, 05:22:27) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
