--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -1340,7 +1340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1383,12 +1383,12 @@
     "sum_other_a = MatrixSymbol('am', 1,T)\n",
     "sum_a = a + sum_other_a\n",
     "\n",
-    "mz = CC.Ac5.shape[0]\n",
+    "mz = CC.Ac.shape[0]\n",
     "A_z = MatrixSymbol('Az', mz, mz)\n",
     "b_z = MatrixSymbol('bz', 1, mz)\n",
     "d_z = MatrixSymbol('dz', mz, 1)\n",
     "\n",
-    "my = TD.At5.shape[0]\n",
+    "my = TD.At.shape[0]\n",
     "A_y = MatrixSymbol('Ay', my, my)\n",
     "b_y = MatrixSymbol('by', 1, my)\n",
     "d_y = MatrixSymbol('dy', my, 1)\n",
@@ -1463,7 +1463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1475,7 +1475,7 @@
        "Matrix([[(F2xCO2/log(2))*Lambda(_d, log(_d)).(1/zref*(bz*((a[0, 0] + am[0, 0])*dz + Az*z0) + zrefm)), (F2xCO2/log(2))*Lambda(_d, log(_d)).(1/zref*(bz*((a[0, 1] + am[0, 1])*dz + Az*((a[0, 0] + am[0, 0])*dz + Az*z0)) + zrefm)), (F2xCO2/log(2))*Lambda(_d, log(_d)).(1/zref*(bz*((a[0, 2] + am[0, 2])*dz + Az*((a[0, 1] + am[0, 1])*dz + Az*((a[0, 0] + am[0, 0])*dz + Az*z0))) + zrefm))]])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1486,22 +1486,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}6 by dy \\left[\\begin{matrix}\\frac{F2xCO2}{\\log{\\left(2 \\right)}} \\left(\\left(zref \\left(bz \\left(\\left(a_{0, 0} + am_{0, 0}\\right) dz + Az z_{0}\\right) + zrefm\\right)^{-1}\\right) \\circ \\left(\\frac{1}{zref} bz dz\\right)\\right)\\end{matrix}\\right] & 0 & 0\\\\6 by \\left(Ay dy \\left[\\begin{matrix}\\frac{F2xCO2}{\\log{\\left(2 \\right)}} \\left(\\left(zref \\left(bz \\left(\\left(a_{0, 0} + am_{0, 0}\\right) dz + Az z_{0}\\right) + zrefm\\right)^{-1}\\right) \\circ \\left(\\frac{1}{zref} bz dz\\right)\\right)\\end{matrix}\\right] + dy \\left[\\begin{matrix}\\frac{F2xCO2}{\\log{\\left(2 \\right)}} \\left(\\left(zref \\left(bz \\left(\\left(a_{0, 1} + am_{0, 1}\\right) dz + Az \\left(\\left(a_{0, 0} + am_{0, 0}\\right) dz + Az z_{0}\\right)\\right) + zrefm\\right)^{-1}\\right) \\circ \\left(\\frac{1}{zref} bz Az dz\\right)\\right)\\end{matrix}\\right]\\right) & 6 by dy \\left[\\begin{matrix}\\frac{F2xCO2}{\\log{\\left(2 \\right)}} \\left(\\left(zref \\left(bz \\left(\\left(a_{0, 1} + am_{0, 1}\\right) dz + Az \\left(\\left(a_{0, 0} + am_{0, 0}\\right) dz + Az z_{0}\\right)\\right) + zrefm\\right)^{-1}\\right) \\circ \\left(\\frac{1}{zref} bz dz\\right)\\right)\\end{matrix}\\right] & 0\\\\6 by \\left(Ay \\left(Ay dy \\left[\\begin{matrix}\\frac{F2xCO2}{\\log{\\left(2 \\right)}} \\left(\\left(zref \\left(bz \\left(\\left(a_{0, 0} + am_{0, 0}\\right) dz + Az z_{0}\\right) + zrefm\\right)^{-1}\\right) \\circ \\left(\\frac{1}{zref} bz dz\\right)\\right)\\end{matrix}\\right] + dy \\left[\\begin{matrix}\\frac{F2xCO2}{\\log{\\left(2 \\right)}} \\left(\\left(zref \\left(bz \\left(\\left(a_{0, 1} + am_{0, 1}\\right) dz + Az \\left(\\left(a_{0, 0} + am_{0, 0}\\right) dz + Az z_{0}\\right)\\right) + zrefm\\right)^{-1}\\right) \\circ \\left(\\frac{1}{zref} bz Az dz\\right)\\right)\\end{matrix}\\right]\\right) + dy \\left[\\begin{matrix}\\frac{F2xCO2}{\\log{\\left(2 \\right)}} \\left(\\left(zref \\left(bz \\left(\\left(a_{0, 2} + am_{0, 2}\\right) dz + Az \\left(\\left(a_{0, 1} + am_{0, 1}\\right) dz + Az \\left(\\left(a_{0, 0} + am_{0, 0}\\right) dz + Az z_{0}\\right)\\right)\\right) + zrefm\\right)^{-1}\\right) \\circ \\left(\\frac{1}{zref} bz Az^{2} dz\\right)\\right)\\end{matrix}\\right]\\right) & 6 by \\left(Ay dy \\left[\\begin{matrix}\\frac{F2xCO2}{\\log{\\left(2 \\right)}} \\left(\\left(zref \\left(bz \\left(\\left(a_{0, 1} + am_{0, 1}\\right) dz + Az \\left(\\left(a_{0, 0} + am_{0, 0}\\right) dz + Az z_{0}\\right)\\right) + zrefm\\right)^{-1}\\right) \\circ \\left(\\frac{1}{zref} bz dz\\right)\\right)\\end{matrix}\\right] + dy \\left[\\begin{matrix}\\frac{F2xCO2}{\\log{\\left(2 \\right)}} \\left(\\left(zref \\left(bz \\left(\\left(a_{0, 2} + am_{0, 2}\\right) dz + Az \\left(\\left(a_{0, 1} + am_{0, 1}\\right) dz + Az \\left(\\left(a_{0, 0} + am_{0, 0}\\right) dz + Az z_{0}\\right)\\right)\\right) + zrefm\\right)^{-1}\\right) \\circ \\left(\\frac{1}{zref} bz Az dz\\right)\\right)\\end{matrix}\\right]\\right) & 6 by dy \\left[\\begin{matrix}\\frac{F2xCO2}{\\log{\\left(2 \\right)}} \\left(\\left(zref \\left(bz \\left(\\left(a_{0, 2} + am_{0, 2}\\right) dz + Az \\left(\\left(a_{0, 1} + am_{0, 1}\\right) dz + Az \\left(\\left(a_{0, 0} + am_{0, 0}\\right) dz + Az z_{0}\\right)\\right)\\right) + zrefm\\right)^{-1}\\right) \\circ \\left(\\frac{1}{zref} bz dz\\right)\\right)\\end{matrix}\\right]\\end{matrix}\\right]$"
+      ],
       "text/plain": [
-       "(1, 3)"
+       "Matrix([\n",
+       "[                                                                                                                                                                                                                                                                                                                                                                        6*by*dy*Matrix([[(F2xCO2/log(2))*(HadamardProduct(zref*(bz*((a[0, 0] + am[0, 0])*dz + Az*z0) + zrefm)**(-1), 1/zref*bz*dz))]]),                                                                                                                                                                                                                                                                                                                                                               0,                                                                                                                                                                                            0],\n",
+       "[                                                                                                                                                                                                     6*by*(Ay*dy*Matrix([[(F2xCO2/log(2))*(HadamardProduct(zref*(bz*((a[0, 0] + am[0, 0])*dz + Az*z0) + zrefm)**(-1), 1/zref*bz*dz))]]) + dy*Matrix([[(F2xCO2/log(2))*(HadamardProduct(zref*(bz*((a[0, 1] + am[0, 1])*dz + Az*((a[0, 0] + am[0, 0])*dz + Az*z0)) + zrefm)**(-1), 1/zref*bz*Az*dz))]])),                                                                                                                                                                                                   6*by*dy*Matrix([[(F2xCO2/log(2))*(HadamardProduct(zref*(bz*((a[0, 1] + am[0, 1])*dz + Az*((a[0, 0] + am[0, 0])*dz + Az*z0)) + zrefm)**(-1), 1/zref*bz*dz))]]),                                                                                                                                                                                            0],\n",
+       "[6*by*(Ay*(Ay*dy*Matrix([[(F2xCO2/log(2))*(HadamardProduct(zref*(bz*((a[0, 0] + am[0, 0])*dz + Az*z0) + zrefm)**(-1), 1/zref*bz*dz))]]) + dy*Matrix([[(F2xCO2/log(2))*(HadamardProduct(zref*(bz*((a[0, 1] + am[0, 1])*dz + Az*((a[0, 0] + am[0, 0])*dz + Az*z0)) + zrefm)**(-1), 1/zref*bz*Az*dz))]])) + dy*Matrix([[(F2xCO2/log(2))*(HadamardProduct(zref*(bz*((a[0, 2] + am[0, 2])*dz + Az*((a[0, 1] + am[0, 1])*dz + Az*((a[0, 0] + am[0, 0])*dz + Az*z0))) + zrefm)**(-1), 1/zref*bz*Az**2*dz))]])), 6*by*(Ay*dy*Matrix([[(F2xCO2/log(2))*(HadamardProduct(zref*(bz*((a[0, 1] + am[0, 1])*dz + Az*((a[0, 0] + am[0, 0])*dz + Az*z0)) + zrefm)**(-1), 1/zref*bz*dz))]]) + dy*Matrix([[(F2xCO2/log(2))*(HadamardProduct(zref*(bz*((a[0, 2] + am[0, 2])*dz + Az*((a[0, 1] + am[0, 1])*dz + Az*((a[0, 0] + am[0, 0])*dz + Az*z0))) + zrefm)**(-1), 1/zref*bz*Az*dz))]])), 6*by*dy*Matrix([[(F2xCO2/log(2))*(HadamardProduct(zref*(bz*((a[0, 2] + am[0, 2])*dz + Az*((a[0, 1] + am[0, 1])*dz + Az*((a[0, 0] + am[0, 0])*dz + Az*z0))) + zrefm)**(-1), 1/zref*bz*dz))]])]])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y_AT.shape"
+    "(y_AT + 5*y_AT).jacobian(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Matrix([[by*(Ay*y0 + dy*Matrix([[(F2xCO2/log(2))*Lambda(_d, log(_d)).(1/zref*(bz*((a[0, 0] + am[0, 0])*dz + Az*z0) + zrefm))]])), by*(Ay*(Ay*y0 + dy*Matrix([[(F2xCO2/log(2))*Lambda(_d, log(_d)).(1/zref*(bz*((a[0, 0] + am[0, 0])*dz + Az*z0) + zrefm))]])) + dy*Matrix([[(F2xCO2/log(2))*Lambda(_d, log(_d)).(1/zref*(bz*((a[0, 1] + am[0, 1])*dz + Az*((a[0, 0] + am[0, 0])*dz + Az*z0)) + zrefm))]])), by*(Ay*(Ay*(Ay*y0 + dy*Matrix([[(F2xCO2/log(2))*Lambda(_d, log(_d)).(1/zref*(bz*((a[0, 0] + am[0, 0])*dz + Az*z0) + zrefm))]])) + dy*Matrix([[(F2xCO2/log(2))*Lambda(_d, log(_d)).(1/zref*(bz*((a[0, 1] + am[0, 1])*dz + Az*((a[0, 0] + am[0, 0])*dz + Az*z0)) + zrefm))]])) + dy*Matrix([[(F2xCO2/log(2))*Lambda(_d, log(_d)).(1/zref*(bz*((a[0, 2] + am[0, 2])*dz + Az*((a[0, 1] + am[0, 1])*dz + Az*((a[0, 0] + am[0, 0])*dz + Az*z0))) + zrefm))]]))]]),\n",
+       " Matrix([[by*(Ay*y0 + dy*Matrix([[(F2xCO2/log(2))*Lambda(_d, log(_d)).(1/zref*(bz*((a[0, 0] + am[0, 0])*dz + Az*z0) + zrefm))]])), by*(Ay*(Ay*y0 + dy*Matrix([[(F2xCO2/log(2))*Lambda(_d, log(_d)).(1/zref*(bz*((a[0, 0] + am[0, 0])*dz + Az*z0) + zrefm))]])) + dy*Matrix([[(F2xCO2/log(2))*Lambda(_d, log(_d)).(1/zref*(bz*((a[0, 1] + am[0, 1])*dz + Az*((a[0, 0] + am[0, 0])*dz + Az*z0)) + zrefm))]])), by*(Ay*(Ay*(Ay*y0 + dy*Matrix([[(F2xCO2/log(2))*Lambda(_d, log(_d)).(1/zref*(bz*((a[0, 0] + am[0, 0])*dz + Az*z0) + zrefm))]])) + dy*Matrix([[(F2xCO2/log(2))*Lambda(_d, log(_d)).(1/zref*(bz*((a[0, 1] + am[0, 1])*dz + Az*((a[0, 0] + am[0, 0])*dz + Az*z0)) + zrefm))]])) + dy*Matrix([[(F2xCO2/log(2))*Lambda(_d, log(_d)).(1/zref*(bz*((a[0, 2] + am[0, 2])*dz + Az*((a[0, 1] + am[0, 1])*dz + Az*((a[0, 0] + am[0, 0])*dz + Az*z0))) + zrefm))]]))]]),\n",
+       " Matrix([[by*(Ay*y0 + dy*Matrix([[(F2xCO2/log(2))*Lambda(_d, log(_d)).(1/zref*(bz*((a[0, 0] + am[0, 0])*dz + Az*z0) + zrefm))]])), by*(Ay*(Ay*y0 + dy*Matrix([[(F2xCO2/log(2))*Lambda(_d, log(_d)).(1/zref*(bz*((a[0, 0] + am[0, 0])*dz + Az*z0) + zrefm))]])) + dy*Matrix([[(F2xCO2/log(2))*Lambda(_d, log(_d)).(1/zref*(bz*((a[0, 1] + am[0, 1])*dz + Az*((a[0, 0] + am[0, 0])*dz + Az*z0)) + zrefm))]])), by*(Ay*(Ay*(Ay*y0 + dy*Matrix([[(F2xCO2/log(2))*Lambda(_d, log(_d)).(1/zref*(bz*((a[0, 0] + am[0, 0])*dz + Az*z0) + zrefm))]])) + dy*Matrix([[(F2xCO2/log(2))*Lambda(_d, log(_d)).(1/zref*(bz*((a[0, 1] + am[0, 1])*dz + Az*((a[0, 0] + am[0, 0])*dz + Az*z0)) + zrefm))]])) + dy*Matrix([[(F2xCO2/log(2))*Lambda(_d, log(_d)).(1/zref*(bz*((a[0, 2] + am[0, 2])*dz + Az*((a[0, 1] + am[0, 1])*dz + Az*((a[0, 0] + am[0, 0])*dz + Az*z0))) + zrefm))]]))]]),\n",
+       " Matrix([[by*(Ay*y0 + dy*Matrix([[(F2xCO2/log(2))*Lambda(_d, log(_d)).(1/zref*(bz*((a[0, 0] + am[0, 0])*dz + Az*z0) + zrefm))]])), by*(Ay*(Ay*y0 + dy*Matrix([[(F2xCO2/log(2))*Lambda(_d, log(_d)).(1/zref*(bz*((a[0, 0] + am[0, 0])*dz + Az*z0) + zrefm))]])) + dy*Matrix([[(F2xCO2/log(2))*Lambda(_d, log(_d)).(1/zref*(bz*((a[0, 1] + am[0, 1])*dz + Az*((a[0, 0] + am[0, 0])*dz + Az*z0)) + zrefm))]])), by*(Ay*(Ay*(Ay*y0 + dy*Matrix([[(F2xCO2/log(2))*Lambda(_d, log(_d)).(1/zref*(bz*((a[0, 0] + am[0, 0])*dz + Az*z0) + zrefm))]])) + dy*Matrix([[(F2xCO2/log(2))*Lambda(_d, log(_d)).(1/zref*(bz*((a[0, 1] + am[0, 1])*dz + Az*((a[0, 0] + am[0, 0])*dz + Az*z0)) + zrefm))]])) + dy*Matrix([[(F2xCO2/log(2))*Lambda(_d, log(_d)).(1/zref*(bz*((a[0, 2] + am[0, 2])*dz + Az*((a[0, 1] + am[0, 1])*dz + Az*((a[0, 0] + am[0, 0])*dz + Az*z0))) + zrefm))]]))]]),\n",
+       " Matrix([[by*(Ay*y0 + dy*Matrix([[(F2xCO2/log(2))*Lambda(_d, log(_d)).(1/zref*(bz*((a[0, 0] + am[0, 0])*dz + Az*z0) + zrefm))]])), by*(Ay*(Ay*y0 + dy*Matrix([[(F2xCO2/log(2))*Lambda(_d, log(_d)).(1/zref*(bz*((a[0, 0] + am[0, 0])*dz + Az*z0) + zrefm))]])) + dy*Matrix([[(F2xCO2/log(2))*Lambda(_d, log(_d)).(1/zref*(bz*((a[0, 1] + am[0, 1])*dz + Az*((a[0, 0] + am[0, 0])*dz + Az*z0)) + zrefm))]])), by*(Ay*(Ay*(Ay*y0 + dy*Matrix([[(F2xCO2/log(2))*Lambda(_d, log(_d)).(1/zref*(bz*((a[0, 0] + am[0, 0])*dz + Az*z0) + zrefm))]])) + dy*Matrix([[(F2xCO2/log(2))*Lambda(_d, log(_d)).(1/zref*(bz*((a[0, 1] + am[0, 1])*dz + Az*((a[0, 0] + am[0, 0])*dz + Az*z0)) + zrefm))]])) + dy*Matrix([[(F2xCO2/log(2))*Lambda(_d, log(_d)).(1/zref*(bz*((a[0, 2] + am[0, 2])*dz + Az*((a[0, 1] + am[0, 1])*dz + Az*((a[0, 0] + am[0, 0])*dz + Az*z0))) + zrefm))]]))]]),\n",
+       " Matrix([[by*(Ay*y0 + dy*Matrix([[(F2xCO2/log(2))*Lambda(_d, log(_d)).(1/zref*(bz*((a[0, 0] + am[0, 0])*dz + Az*z0) + zrefm))]])), by*(Ay*(Ay*y0 + dy*Matrix([[(F2xCO2/log(2))*Lambda(_d, log(_d)).(1/zref*(bz*((a[0, 0] + am[0, 0])*dz + Az*z0) + zrefm))]])) + dy*Matrix([[(F2xCO2/log(2))*Lambda(_d, log(_d)).(1/zref*(bz*((a[0, 1] + am[0, 1])*dz + Az*((a[0, 0] + am[0, 0])*dz + Az*z0)) + zrefm))]])), by*(Ay*(Ay*(Ay*y0 + dy*Matrix([[(F2xCO2/log(2))*Lambda(_d, log(_d)).(1/zref*(bz*((a[0, 0] + am[0, 0])*dz + Az*z0) + zrefm))]])) + dy*Matrix([[(F2xCO2/log(2))*Lambda(_d, log(_d)).(1/zref*(bz*((a[0, 1] + am[0, 1])*dz + Az*((a[0, 0] + am[0, 0])*dz + Az*z0)) + zrefm))]])) + dy*Matrix([[(F2xCO2/log(2))*Lambda(_d, log(_d)).(1/zref*(bz*((a[0, 2] + am[0, 2])*dz + Az*((a[0, 1] + am[0, 1])*dz + Az*((a[0, 0] + am[0, 0])*dz + Az*z0))) + zrefm))]]))]])]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum_"
    ]
   },
   {
@@ -3489,11 +3520,53 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "La matrice Jacobienne de cette fonction est définie comme étant la matrice composée des dérivées partielles de la fonction par rapport à chaque variable indépendante. Dans ce cas, les variables indépendantes sont les $a_k(t)$.\n",
+    "\n",
+    "Pour obtenir la matrice Jacobienne, nous devons donc calculer la dérivée partielle de la fonction par rapport à chaque $a_k(t)$. La formule générale pour calculer une dérivée partielle est la suivante:\n",
+    "\n",
+    "$$\\frac{\\partial f}{\\partial x_i} = \\lim_{h \\to 0} \\frac{f(x_1, x_2, \\dots, x_i + h, \\dots, x_n) - f(x_1, x_2, \\dots, x_i, \\dots, x_n)}{h}$$\n",
+    "\n",
+    "En utilisant cette formule, nous pouvons calculer chaque élément de la matrice Jacobienne de la fonction donnée. Par exemple, l'élément situé à la i-ème ligne et à la j-ème colonne de la matrice Jacobienne sera:\n",
+    "\n",
+    "$$\\frac{\\partial f}{\\partial a_j(i)} = \\lim_{h \\to 0} \\frac{\\sum_{t=1}^T D(Y(\\sum_{s=1}^t F(Z(\\sum_{w=1}^s \\sum_{k=1}^N a_k(w))))) - \\sum_{t=1}^T D(Y(\\sum_{s=1}^t F(Z(\\sum_{w=1}^s \\sum_{k=1}^N a_k(w) + h \\delta_{j,k})))}{h}$$\n",
+    "\n",
+    "où $\\delta_{j,k}$ est le symbole de Kronecker qui vaut 1 si $j = k$ et 0 sinon.\n",
+    "\n",
+    "Je peux vous aider à calculer les éléments de la matrice Jacobienne si vous le souhaitez."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Très bien. Pour calculer chaque élément de la matrice Jacobienne, nous devons donc appliquer la formule générale ci-dessus. Voici comment nous pouvons le faire pour l'élément situé à la i-ème ligne et à la j-ème colonne de la matrice:\n",
+    "\n",
+    "$$\\frac{\\partial f}{\\partial a_j(i)} = \\lim_{h \\to 0} \\frac{\\sum_{t=1}^T D(Y(\\sum_{s=1}^t F(Z(\\sum_{w=1}^s \\sum_{k=1}^N a_k(w))))) - \\sum_{t=1}^T D(Y(\\sum_{s=1}^t F(Z(\\sum_{w=1}^s \\sum_{k=1}^N a_k(w) + h \\delta_{j,k})))}{h}$$\n",
+    "\n",
+    "Pour simplifier cette expression, nous pouvons remarquer que la fonction $\\sum_{t=1}^T D(Y(\\sum_{s=1}^t F(Z(\\sum_{w=1}^s \\sum_{k=1}^N a_k(w)))))$ ne dépend pas de $a_j(i)$ lorsque $i \\neq w$. Nous pouvons donc enlever ces termes de la somme:\n",
+    "\n",
+    "$$\\frac{\\partial f}{\\partial a_j(i)} = \\lim_{h \\to 0} \\frac{\\sum_{t=1}^T D(Y(\\sum_{s=1}^t F(Z(\\sum_{w=1}^s \\sum_{k=1}^N a_k(w) + h \\delta_{j,k})))) - \\sum_{t=1}^T D(Y(\\sum_{s=1}^t F(Z(\\sum_{w=1}^s \\sum_{k=1}^N a_k(w)))))}{h}$$\n",
+    "\n",
+    "$$\\frac{\\partial f}{\\partial a_j(i)} = \\lim_{h \\to 0} \\frac{\\sum_{t=1}^T D(Y(\\sum_{s=1}^t F(Z(\\sum_{w=1}^s \\sum_{k=1}^N a_k(w) + h \\delta_{j,k})))) - \\sum_{t=1}^T D(Y(\\sum_{s=1}^t F(Z(\\sum_{w=1}^s \\sum_{k=1}^N a_k(w))))))}{h}$$\n",
+    "\n",
+    "$$\\frac{\\partial f}{\\partial a_j(i)} = \\lim_{h \\to 0} \\frac{\\sum_{t=1}^T D(Y(\\sum_{s=1}^t F(Z(\\sum_{w=1}^s \\sum_{k=1}^N a_k(w) + h \\delta_{j,k})))) - \\sum_{t=1}^T D(Y(\\sum_{s=1}^t F(Z(\\sum_{w=1}^s \\sum_{k=1}^N a_k(w))))))}{h}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ette propriété, nous pouvons réécrire l'expression de la dérivée partielle de la façon suivante:\n",
+    "\n",
+    "$$\\frac{\\partial f}{\\partial a_j(i)} = \\lim_{h \\to 0} \\frac{\\sum_{t=1}^T D(Y(\\sum_{s=1}^t F(Z(\\sum_{w=1}^s \\sum_{k=1}^N a_k(w))))) - \\sum_{t=1}^T D(Y(\\sum_{s=1}^t F(Z(\\sum_{w=1}^s \\sum_{k=1}^N a_k(w) + h \\delta_{j,k})))}{h} = \\sum_{t=1}^T \\frac{\\partial D}{\\partial Y} \\frac{\\partial Y}{\\partial F} \\frac{\\partial F}{\\partial Z} \\frac{\\partial Z}{\\partial a_j(i)}$$\n",
+    "\n",
+    "où chaque dérivée partielle est calculée en utilisant la formule générale donnée précédemment.\n",
+    "\n",
+    "Il ne vous reste plus qu'à calculer chaque dérivée partielle en utilisant la formule générale, et à remplacer chaque dérivée partielle par sa valeur dans l'expression ci-dessus pour obtenir l'élément de la matrice Jacobienne situé à la i-ème ligne et à la j-ème colonne. Si vous avez besoin d'aide pour calculer une dérivée partielle en particulier, n'hésitez pas à me poser une question."
+   ]
   }
  ],
  "metadata": {
@@ -3512,7 +3585,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.12 (main, Apr  4 2022, 05:22:27) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
