--- a/jacobian.ipynb
+++ b/jacobian.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,6 +153,48 @@
     "def jacobian_potential_wrapped(a):\n",
     "    return -jacobian_potential( N, T, a, BENEFITS_CONVEX, DELTAS, damage_func,  scm)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[array([5.735, 2.505, 1.57 , 1.355, 0.88 , 6.755]), array([4.588, 2.004, 1.256, 1.084, 0.704, 5.404]), array([3.441, 1.503, 0.942, 0.813, 0.528, 4.053]), array([2.294, 1.002, 0.628, 0.542, 0.352, 2.702]), array([1.147, 0.501, 0.314, 0.271, 0.176, 1.351]), array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.]), array([0., 0., 0., 0., 0., 0.])]\n",
+      "[5.735 2.505 1.57  1.355 0.88  6.755 4.588 2.004 1.256 1.084 0.704 5.404\n",
+      " 3.441 1.503 0.942 0.813 0.528 4.053 2.294 1.002 0.628 0.542 0.352 2.702\n",
+      " 1.147 0.501 0.314 0.271 0.176 1.351 0.    0.    0.    0.    0.    0.\n",
+      " 0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      " 0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      " 0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      " 0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      " 0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      " 0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      " 0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      " 0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      " 0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      " 0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      " 0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      " 0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      " 0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      " 0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      " 0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      " 0.    0.    0.    0.    0.    0.   ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "bound_ = []\n",
+    "for idx in range(T) : \n",
+    "    bound_.append(ACTION_SETS[:,1]*max(0, (5-idx)/10))\n",
+    "print(bound_)  \n",
+    "bound_ = np.array(bound_).flatten()\n",
+    "print(bound_)  \n"
    ]
   },
   {
@@ -184,6 +226,7 @@
     "bound_ = []\n",
     "for idx in range(T) : \n",
     "    bound_.append(ACTION_SETS[:,1]*max(0, (5-idx)/10))\n",
+    "\n",
     "bound_ = np.array(bound_).flatten()\n",
     "\n",
     "from scipy.optimize import *\n",
