--- a/notebook/pareto.ipynb
+++ b/notebook/pareto.ipynb
@@ -13368,7 +13368,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('CO2')",
+   "display_name": "CO2",
    "language": "python",
    "name": "python3"
   },
@@ -13387,7 +13387,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "941973300c6f8f53bfdabd84e1ce47761de598a1bd1e6f13c1be531162f7e3dd"
+    "hash": "16b467d0d483b0df94b9be8390e41b2161ce335e4b36d66db099cbe7bed530bc"
    }
   }
  },
