--- a/notebook/Notebook2.ipynb
+++ b/notebook/Notebook2.ipynb
@@ -162,7 +162,8 @@
     "\n",
     "    plt.xlabel(\"Emission en GtCO2\")\n",
     "    plt.ylabel(\"Utilité en Trillion $ 2015\")\n",
-    "    "
+    "\n",
+    "ipywidgets.interact(plot_fct_ln, fct=[cost_polynomial, cost_exponential_polynomial, cost_polynomial_exponential], y_at=(0,10,0.01), z_at=(0,10000,50), g0=(0,10,0.1), g1=(-10,10,0.1), g2=(-10,10,0.1))"
    ]
   },
   {
@@ -731,11 +732,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "49d10a6a982d82aaf494346de24040cad7ada9b180d90b3a60b2195d1f0e3027"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('CO2')",
+   "display_name": "CO2",
    "language": "python",
    "name": "python3"
   },
@@ -750,6 +748,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "16b467d0d483b0df94b9be8390e41b2161ce335e4b36d66db099cbe7bed530bc"
+   }
   }
  },
  "nbformat": 4,
